@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST sqlite3-ruby-1.1.0.gem 39424 RMD160 f4797d9ac0c791cb7e40d0af4e775df90a06c5b2 SHA1 7e803b1183ba276de7288acc2336a82efc2c053e SHA256 7f6c45f53f54f576bd43301219aae663c0ad437d1178a6cdec19f36ebf9a9dae
 DIST sqlite3-ruby-1.2.1.tar.bz2 83105 RMD160 de3042471a2e021e299c79c189fb35eb364f0128 SHA1 68d40bc263d36fed256ca74954c6894760d72ebd SHA256 7b1ebbf0597d5d020eae73ca21e358450db47691bab6a18ab8354f22bca36952
 EBUILD sqlite3-ruby-1.1.0.ebuild 702 RMD160 9718d6ed75104f15fe280f92177fde1f7b03f849 SHA1 ecc8eb29e6b4094205374805d4582296fe5c2335 SHA256 a77eda13e3b29593091797d7a21f880891bbd796663e223711da04f4b7905179
-EBUILD sqlite3-ruby-1.2.1.ebuild 1485 RMD160 a71a9774815d38ed6268ec4e4ae505c4b7807258 SHA1 86dcf8e10bb3a4888f1fd1c209a596569b1789dd SHA256 4f155cac29d787851edfd6ddcff598a1ca57e6800a9d46eb07730696edfb0c00
-MISC ChangeLog 2522 RMD160 3bc68f97f604dac72d3395815e12b8f4d5b14b55 SHA1 08688a280fdb3592fda7d18bb9d888588adbd23a SHA256 1cd9de24b509d9f791350e5244a1cbcace079210874a2381d8cdb25f4f981984
+EBUILD sqlite3-ruby-1.2.1.ebuild 1505 RMD160 6f6011dc940c6a823d6b1c0b4c99b800055e3bd1 SHA1 21a449d9e8a0a5e3e419c8b2f67b150d8beb1ccb SHA256 55113588b94951847bf261b62c8085d9b3c3eecf583b6dd82fb4909ad2c2461d
+MISC ChangeLog 2647 RMD160 59b818bde87609ca425cab28b9951b8004a85b47 SHA1 12ec9a2d0d584ac6af6329d221206d9066d9b89d SHA256 1b336a0cde4c36a73fff14b1d52b8d32c7c7f03b4d72b4214fe1bd8d357ac871
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgn1fQACgkQQUozDL2JlH60qQCdEE9ECdwgUCSRgU8cN7IZzqCd
+3SkAni3ECcKJx5UagmPgYaTMafKjkTBR
+=Bp/S
+-----END PGP SIGNATURE-----
