@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/sqlite3-ruby-1.2.1.ebuild,v 1.8 2007/05/24 14:05:35 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/sqlite3-ruby-1.2.1.ebuild,v 1.9 2008/05/12 05:30:15 graaff Exp $
 
 inherit ruby
 
@@ -15,7 +15,8 @@ SLOT="0"
 IUSE="doc swig"
 
 USE_RUBY="ruby18 ruby19"
-DEPEND="=dev-db/sqlite-3*
+RDEPEND="=dev-db/sqlite-3*"
+DEPEND="${RDEPEND}
 	swig? ( dev-lang/swig )"
 
 pkg_setup() {
@@ -45,7 +46,7 @@ src_compile() {
 }
 
 src_install() {
-	${RUBY} setup.rb install --prefix=${D} \
+	${RUBY} setup.rb install --prefix="${D}" \
 		|| die "setup.rb install failed"
 
 	dodoc README ChangeLog
